; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wimax/i2400m/extr_tx.c_i2400m_tx_fits.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wimax/i2400m/extr_tx.c_i2400m_tx_fits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2400m = type { %struct.i2400m_msg_hdr* }
%struct.i2400m_msg_hdr = type { i32 }

@I2400M_TX_PLD_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2400m*)* @i2400m_tx_fits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i2400m_tx_fits(%struct.i2400m* %0) #0 {
  %2 = alloca %struct.i2400m*, align 8
  %3 = alloca %struct.i2400m_msg_hdr*, align 8
  store %struct.i2400m* %0, %struct.i2400m** %2, align 8
  %4 = load %struct.i2400m*, %struct.i2400m** %2, align 8
  %5 = getelementptr inbounds %struct.i2400m, %struct.i2400m* %4, i32 0, i32 0
  %6 = load %struct.i2400m_msg_hdr*, %struct.i2400m_msg_hdr** %5, align 8
  store %struct.i2400m_msg_hdr* %6, %struct.i2400m_msg_hdr** %3, align 8
  %7 = load %struct.i2400m_msg_hdr*, %struct.i2400m_msg_hdr** %3, align 8
  %8 = getelementptr inbounds %struct.i2400m_msg_hdr, %struct.i2400m_msg_hdr* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i64 @le16_to_cpu(i32 %9)
  %11 = load i64, i64* @I2400M_TX_PLD_MAX, align 8
  %12 = icmp slt i64 %10, %11
  %13 = zext i1 %12 to i32
  ret i32 %13
}

declare dso_local i64 @le16_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
